--- a/css/app.css
+++ b/css/app.css
@@ -10,7 +10,7 @@ a {
 
 body {
   background: #f0f0f0;
-  font-family: sans-serif;
+  font-family: Nunito, sans-serif;
 }
 
 .wrapper {
@@ -66,9 +66,37 @@ body {
   border-radius: 15px;
   color: #000;
   font-size: 14px;
+  margin-bottom: 20px;
+}
+.info--social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
+  gap: 5px;
+}
+.info--social__item a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: #6f76ed;
+  position: relative;
+  color: #fff;
+  border-radius: 50%;
+  transition: 0.3s ease-in-out;
+}
+.info--social__item a i {
+  position: absolute;
+  font-size: 20px;
+  top: 25%;
+  left: 25%;
+}
+.info--social__item a:hover {
+  background: #545df0;
 }
 .info--image {
   padding: 40px;
+  padding-bottom: 10px;
   position: relative;
 }
 .info--image:hover {
@@ -109,10 +137,13 @@ body {
   transition: 0.3s ease-in-out;
 }
 .info--slogan {
-  padding: 10px 20px;
+  padding: 10px 20px 15px;
   color: #404040;
   text-align: center;
   line-height: 1.1;
+}
+.info--content:hover .info--content__item {
+  background: #eeeeee;
 }
 .info--content {
   padding: 10px 20px;
@@ -121,7 +152,7 @@ body {
   background: #6f76ed;
   margin-bottom: 5px;
   padding: 30px 15px;
-  font-size: 15px;
+  font-size: 14px;
   color: #fff;
   position: relative;
   transition: 0.3s ease-in-out;
@@ -131,8 +162,7 @@ body {
 }
 .info--content__item:hover {
   cursor: pointer;
-  background: #545df0;
-  font-size: 20px;
+  background: #545df0 !important;
   top: -10px;
 }
 .info--content__item:first-child {
