--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -3,8 +3,36 @@
   border-radius: 15px;
   color: #000;
   font-size: 14px;
+  margin-bottom: 20px;
+  &--social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 20px;
+    gap: 5px;
+    &__item a {
+      display: block;
+      width: 40px;
+      height: 40px;
+      background: $primary-color;
+      position: relative;
+      color: $white-color;
+      border-radius: 50%;
+      transition: 0.3s ease-in-out;
+      & i {
+        position: absolute;
+        font-size: 20px;
+        top: 25%;
+        left: 25%;
+      }
+      &:hover {
+        background: $primary-color-hover;
+      }
+    }
+  }
   &--image {
     padding: 40px;
+    padding-bottom: 10px;
     position: relative;
     &:hover {
       cursor: pointer;
@@ -45,10 +73,13 @@
     transition: 0.3s ease-in-out;
   }
   &--slogan {
-    padding: 10px 20px;
+    padding: 10px 20px 15px;
     color: $text-color;
     text-align: center;
     line-height: 1.1;
+  }
+  &--content:hover &--content__item {
+    background: $lightgray-color;
   }
   &--content {
     padding: 10px 20px;
@@ -56,7 +87,7 @@
       background: $primary-color;
       margin-bottom: 5px;
       padding: 30px 15px;
-      font-size: 15px;
+      font-size: 14px;
       color: $white-color;
       position: relative;
       transition: 0.3s ease-in-out;
@@ -65,8 +96,7 @@
       text-align: left;
       &:hover {
         cursor: pointer;
-        background: $primary-color-hover;
-        font-size: 20px;
+        background: $primary-color-hover !important;
         top: -10px;
       }
       &:first-child {
