--- a/css/app.css
+++ b/css/app.css
@@ -1,182 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  text-decoration: none;
-  color: #000;
-}
-
-body {
-  background: #f0f0f0;
-  font-family: Nunito, sans-serif;
-}
-
-.wrapper {
-  max-width: 1600px;
-  width: 100%;
-  margin: 0 auto;
-  margin-top: 15px;
-}
-
-.cols {
-  display: flex;
-  justify-content: space-around;
-  gap: 40px;
-}
-
-.col {
-  width: 100%;
-}
-.col-3 {
-  max-width: calc(1600px - 75%);
-  width: 100%;
-  position: relative;
-}
-.col-7 {
-  max-width: calc(1600px - 25%);
-  width: 100%;
-  position: relative;
-}
-
-@media (max-width: 1024px) {
-  .wrapper {
-    box-sizing: border-box;
-    padding: 0 15px;
-  }
-
-  .cols {
-    flex-direction: column;
-    gap: 0;
-  }
-
-  .col {
-    margin-bottom: 40px;
-  }
-  .col-3 {
-    width: 100%;
-  }
-  .col-7 {
-    width: 100%;
-  }
-}
-.info {
-  background: #fff;
-  border-radius: 15px;
-  color: #000;
-  font-size: 14px;
-  margin-bottom: 20px;
-}
-.info--social {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 20px;
-  gap: 5px;
-}
-.info--social__item a {
-  display: block;
-  width: 40px;
-  height: 40px;
-  background: #6f76ed;
-  position: relative;
-  color: #fff;
-  border-radius: 50%;
-  transition: 0.3s ease-in-out;
-}
-.info--social__item a i {
-  position: absolute;
-  font-size: 20px;
-  top: 25%;
-  left: 25%;
-}
-.info--social__item a:hover {
-  background: #545df0;
-}
-.info--image {
-  padding: 40px;
-  padding-bottom: 10px;
-  position: relative;
-}
-.info--image:hover {
-  cursor: pointer;
-}
-.info--image span {
-  position: absolute;
-  bottom: 0;
-  right: 60px;
-  font-size: 14px;
-  background: rgba(111, 118, 237, 0.8);
-  color: #fff;
-  padding: 10px;
-  border-radius: 0 30px 30px 30px;
-  opacity: 0;
-  transition: 0.5s ease-in-out;
-}
-.info--image:hover span {
-  opacity: 1;
-  bottom: 30px;
-}
-.info--image img {
-  width: 75%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  border-radius: 50%;
-  transition: 0.3s ease-out;
-}
-.info--name {
-  font-weight: 700;
-  text-align: center;
-  padding-top: 30px;
-  font-size: 28px;
-  color: #404040;
-  margin-bottom: 5px;
-  transition: 0.3s ease-in-out;
-}
-.info--slogan {
-  padding: 10px 20px 15px;
-  color: #404040;
-  text-align: center;
-  line-height: 1.1;
-}
-.info--content:hover .info--content__item {
-  background: #eeeeee;
-}
-.info--content {
-  padding: 10px 20px;
-}
-.info--content__item {
-  background: #6f76ed;
-  margin-bottom: 5px;
-  padding: 30px 15px;
-  font-size: 14px;
-  color: #fff;
-  position: relative;
-  transition: 0.3s ease-in-out;
-  padding-right: 30px;
-  top: 0;
-  text-align: left;
-}
-.info--content__item:hover {
-  cursor: pointer;
-  background: #545df0 !important;
-  top: -10px;
-}
-.info--content__item:first-child {
-  border-radius: 15px 15px 0 0;
-}
-.info--content__item:last-child {
-  border-radius: 0 0 15px 15px;
-  margin-bottom: 0;
-}
-.info--content__item--icon {
-  position: absolute;
-  top: 50%;
-  right: 15px;
-  transform: translateY(-50%);
-}
-
-/*# sourceMappingURL=app.css.map */
+*{margin:0;padding:0}a{text-decoration:none;color:#000}body{background:#f0f0f0;font-family:Nunito,sans-serif}.wrapper{max-width:1600px;width:100%;margin:0 auto;margin-top:15px}.cols{display:flex;justify-content:space-around;gap:40px}.col{width:100%}.col-3{max-width:calc(1600px - 75%);width:100%;position:relative}.col-7{max-width:calc(1600px - 25%);width:100%;position:relative}@media(max-width: 1024px){.wrapper{box-sizing:border-box;padding:0 15px}.cols{flex-direction:column;gap:0}.col{margin-bottom:40px}.col-3{width:100%}.col-7{width:100%}}.info{background:#fff;border-radius:15px;color:#000;font-size:14px;margin-bottom:20px}.info--social{display:flex;justify-content:center;align-items:center;padding-bottom:20px;gap:5px}.info--social__item a{display:block;width:40px;height:40px;background:#6f76ed;position:relative;color:#fff;border-radius:50%;transition:.3s ease-in-out}.info--social__item a i{position:absolute;font-size:20px;top:25%;left:25%}.info--social__item a:hover{background:#545df0}.info--image{padding:40px;padding-bottom:10px;position:relative}.info--image:hover{cursor:pointer}.info--image span{position:absolute;bottom:0;right:60px;font-size:14px;background:rgba(111,118,237,.8);color:#fff;padding:10px;border-radius:0 30px 30px 30px;opacity:0;transition:.5s ease-in-out}.info--image:hover span{opacity:1;bottom:30px}.info--image img{width:75%;display:flex;justify-content:center;align-items:center;margin:0 auto;border-radius:50%;transition:.3s ease-out}.info--name{font-weight:700;text-align:center;padding-top:30px;font-size:28px;color:#404040;margin-bottom:5px;transition:.3s ease-in-out}.info--slogan{padding:10px 20px 15px;color:#404040;text-align:center;line-height:1.1}.info--content:hover .info--content__item{background:#eee}.info--content{padding:10px 20px}.info--content__item{background:#6f76ed;margin-bottom:5px;padding:30px 15px;font-size:14px;color:#fff;position:relative;transition:.3s ease-in-out;padding-right:30px;top:0;text-align:left}.info--content__item:hover{cursor:pointer;background:#545df0 !important;top:-10px}.info--content__item:first-child{border-radius:15px 15px 0 0}.info--content__item:last-child{border-radius:0 0 15px 15px;margin-bottom:0}.info--content__item--icon{position:absolute;top:50%;right:15px;transform:translateY(-50%)}
