--- a/sass/app.scss
+++ b/sass/app.scss
@@ -3,3 +3,4 @@
 @import 'global';
 @import 'layout';
 @import 'home';
+// sass --no-source-map ./sass/app.scss ./css/app.css --watch --style compressed
