--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,3 +1,6 @@
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+}
 body {
   background: #f0f0f0;
   font-family: Nunito, sans-serif;
