--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,9 +1,11 @@
 .info {
-  background: #fff;
+  background: linear-gradient(60deg, $primary-color-light, #fff);
   border-radius: 15px;
   color: #000;
   font-size: 14px;
   margin-bottom: 20px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
   &--social {
     display: flex;
     justify-content: center;
@@ -30,6 +32,10 @@
       }
     }
   }
+  &:hover &--image span {
+    opacity: 1;
+    bottom: 30px;
+  }
   &--image {
     padding: 40px;
     padding-bottom: 10px;
@@ -42,16 +48,13 @@
       bottom: 0;
       right: 60px;
       font-size: 14px;
-      background: rgba(111, 118, 237, 0.8);
-      color: $white-color;
+      background: rgba(255, 255, 255, 0.8);
+      color: $black-color;
+      font-weight: 700;
       padding: 10px;
       border-radius: 0 30px 30px 30px;
       opacity: 0;
       transition: 0.5s ease-in-out;
-    }
-    &:hover span {
-      opacity: 1;
-      bottom: 30px;
     }
     img {
       width: 75%;
@@ -71,22 +74,25 @@
     color: $text-color;
     margin-bottom: 5px;
     transition: 0.3s ease-in-out;
+    color: $black-color;
   }
   &--slogan {
     padding: 10px 20px 15px;
     color: $text-color;
     text-align: center;
     line-height: 1.1;
+    color: $black-color;
   }
   &--content:hover &--content__item {
-    background: $lightgray-color;
+    opacity: 0.2;
   }
+
   &--content {
     padding: 10px 20px;
     &__item {
       background: $primary-color;
       margin-bottom: 5px;
-      padding: 30px 15px;
+      padding: 12px 15px;
       font-size: 14px;
       color: $white-color;
       position: relative;
@@ -97,13 +103,14 @@
       &:hover {
         cursor: pointer;
         background: $primary-color-hover !important;
-        top: -10px;
+        top: -5px;
+        opacity: 1 !important;
       }
       &:first-child {
-        border-radius: 15px 15px 0 0;
+        border-radius: 5px 5px 0 0;
       }
       &:last-child {
-        border-radius: 0 0 15px 15px;
+        border-radius: 0 0 5px 5px;
         margin-bottom: 0;
       }
       &--icon {
