--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,8 @@
 $max-width: 1600px;
 $col-gap: 40px;
-$primary-color: #6f76ed;
-$primary-color-hover: #545df0;
+$primary-color: #1b74e4;
+$primary-color-hover: #0875fb;
+$primary-color-light: #add2ff;
 $text-color: #404040;
 $lightgray-color: rgb(238, 238, 238);
 $black-color: #000;
