--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,124 +1,128 @@
 .info {
-  background: linear-gradient(60deg, $primary-color-light, #fff);
-  border-radius: 15px;
-  color: #000;
-  font-size: 14px;
-  margin-bottom: 20px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  &--social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 20px;
-    gap: 5px;
-    &__item a {
-      display: block;
-      width: 40px;
-      height: 40px;
-      background: $primary-color;
-      position: relative;
-      color: $white-color;
-      border-radius: 50%;
-      transition: 0.3s ease-in-out;
-      & i {
+    background: linear-gradient(60deg, $primary-color-light, #fff);
+    border-radius: 15px;
+    color: #000;
+    font-size: 14px;
+    margin-bottom: 20px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    &--social {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 20px;
         position: absolute;
-        font-size: 20px;
-        top: 25%;
-        left: 25%;
-      }
-      &:hover {
-        background: $primary-color-hover;
-      }
-    }
-  }
-  &:hover &--image span {
-    opacity: 1;
-    bottom: 30px;
-  }
-  &--image {
-    padding: 40px;
-    padding-bottom: 10px;
-    position: relative;
-    &:hover {
-      cursor: pointer;
-    }
-    span {
-      position: absolute;
-      bottom: 0;
-      right: 60px;
-      font-size: 14px;
-      background: rgba(255, 255, 255, 0.8);
-      color: $black-color;
-      font-weight: 700;
-      padding: 10px;
-      border-radius: 0 30px 30px 30px;
-      opacity: 0;
-      transition: 0.5s ease-in-out;
-    }
-    img {
-      width: 75%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0 auto;
-      border-radius: 50%;
-      transition: 0.3s ease-out;
-    }
-  }
-  &--name {
-    font-weight: 700;
-    text-align: center;
-    padding-top: 30px;
-    font-size: 28px;
-    color: $text-color;
-    margin-bottom: 5px;
-    transition: 0.3s ease-in-out;
-    color: $black-color;
-  }
-  &--slogan {
-    padding: 10px 20px 15px;
-    color: $text-color;
-    text-align: center;
-    line-height: 1.1;
-    color: $black-color;
-  }
-  &--content:hover &--content__item {
-    opacity: 0.2;
-  }
-
-  &--content {
-    padding: 10px 20px;
-    &__item {
-      background: $primary-color;
-      margin-bottom: 5px;
-      padding: 12px 15px;
-      font-size: 14px;
-      color: $white-color;
-      position: relative;
-      transition: 0.3s ease-in-out;
-      padding-right: 30px;
-      top: 0;
-      text-align: left;
-      &:hover {
-        cursor: pointer;
-        background: $primary-color-hover !important;
-        top: -5px;
-        opacity: 1 !important;
-      }
-      &:first-child {
-        border-radius: 5px 5px 0 0;
-      }
-      &:last-child {
-        border-radius: 0 0 5px 5px;
-        margin-bottom: 0;
-      }
-      &--icon {
-        position: absolute;
+        left: 50%;
         top: 50%;
-        right: 15px;
-        transform: translateY(-50%);
-      }
+        transform: translate(-50%, -50%);
+        gap: 5px;
+        &__item a {
+            display: block;
+            width: 40px;
+            height: 40px;
+            background: $primary-color;
+            position: relative;
+            color: $white-color;
+            border-radius: 50%;
+            transition: 0.3s ease-in-out;
+            & i {
+                position: absolute;
+                font-size: 20px;
+                top: 25%;
+                left: 25%;
+            }
+            &:hover {
+                background: $primary-color-hover;
+            }
+        }
     }
-  }
+    &:hover &--image span {
+        opacity: 1;
+        bottom: 30px;
+    }
+    &--image {
+        padding: 40px;
+        padding-bottom: 10px;
+        position: relative;
+        &:hover {
+            cursor: pointer;
+        }
+        span {
+            position: absolute;
+            bottom: 0;
+            right: 60px;
+            font-size: 14px;
+            background: rgba(255, 255, 255, 0.8);
+            color: $black-color;
+            font-weight: 700;
+            padding: 10px;
+            border-radius: 0 30px 30px 30px;
+            opacity: 0;
+            transition: 0.5s ease-in-out;
+        }
+        img {
+            width: 75%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
+            border-radius: 50%;
+            transition: 0.3s ease-out;
+        }
+    }
+    &--name {
+        font-weight: 700;
+        text-align: center;
+        padding-top: 30px;
+        font-size: 28px;
+        color: $text-color;
+        margin-bottom: 5px;
+        transition: 0.3s ease-in-out;
+        color: $black-color;
+    }
+    &--slogan {
+        padding: 10px 20px 15px;
+        color: $text-color;
+        text-align: center;
+        line-height: 1.1;
+        color: $black-color;
+    }
+    &--content:hover &--content__item {
+        opacity: 0.2;
+    }
+
+    &--content {
+        padding: 10px 20px;
+        &__item {
+            background: $primary-color;
+            margin-bottom: 5px;
+            padding: 12px 15px;
+            font-size: 14px;
+            color: $white-color;
+            position: relative;
+            transition: 0.3s ease-in-out;
+            padding-right: 30px;
+            top: 0;
+            text-align: left;
+            &:hover {
+                cursor: pointer;
+                background: $primary-color-hover !important;
+                top: -5px;
+                opacity: 1 !important;
+            }
+            &:first-child {
+                border-radius: 5px 5px 0 0;
+            }
+            &:last-child {
+                border-radius: 0 0 5px 5px;
+                margin-bottom: 0;
+            }
+            &--icon {
+                position: absolute;
+                top: 50%;
+                right: 15px;
+                transform: translateY(-50%);
+            }
+        }
+    }
 }
