--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,7 +1,7 @@
 ::-webkit-scrollbar {
-  width: 0; /* Remove scrollbar space */
+    width: 0; /* Remove scrollbar space */
 }
 body {
-  background: #f0f0f0;
-  font-family: Nunito, sans-serif;
+    background: #f0f0f0;
+    font-family: Barlow, sans-serif;
 }
